/*
 * gradle clean install
 * gradle upload
 * gradle closeAndReleaseRepository
 * gradle appRun
 */
buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
	}
}

plugins {
	id 'io.codearte.nexus-staging' version '0.20.0'
}

allprojects {
	repositories {
		mavenCentral()
	}
	apply plugin: 'java'
	apply plugin: 'eclipse-wtp'
	
	dependencies {
		testImplementation 'junit:junit:4.12'
	}
	sourceCompatibility = 1.11
	targetCompatibility = 1.11

	eclipse {
		classpath {
			defaultOutputDir = file('build/default')
			file.whenMerged {
				entries.each { source ->
					if (source.kind == 'src' && !source.path.startsWith('/')) { // only Source-folders in the project starting with '/' are project-references
						source.output = null // use default Output for all source-folders; without this, eclipse nested path errors would occur
					}
				}
			}
		}
	}
}
